--- a/animation.html
+++ b/animation.html
@@ -8,13 +8,10 @@
 	<div class="face">
 		<div class="mouth"></div>
 		<div class="eyes">
-			<div class="left-eye">
-				<div class="left-eyeball"></div>
-			</div>
-			<div class="right-eye">
-				<div class="right-eyeball"></div>
-			</div>
+			<div class="eye"></div>
+			<div class="eye"></div>
 		</div>
 	</div>
+	<script src="javaScript.js"></script>
 </body>
 </html>
