--- a/animation.html
+++ b/animation.html
@@ -8,8 +8,8 @@
 	<div class="face">
 		<div class="mouth"></div>
 		<div class="eyes">
-			<div class="eye"></div>
-			<div class="eye"></div>
+			<div class="eye" id="one"></div>
+			<div class="eye" id="two"></div>
 		</div>
 	</div>
 	<script src="javaScript.js"></script>
